--- a/wp-content/themes/nisarg/style.css
+++ b/wp-content/themes/nisarg/style.css
@@ -821,8 +821,9 @@ img.wp-post-image{
 .site-header{
     background: #b0bec5;
     position: relative;
-    width: 100%;
-    margin-bottom: 3em;
+    width: 75%;
+    margin-left: 190px;
+    margin-bottom: 1em;
     overflow: hidden;
     min-height: 120px;
 }
