--- a/wp-content/themes/nisarg/css/bootstrap.css
+++ b/wp-content/themes/nisarg/css/bootstrap.css
@@ -1287,9 +1287,7 @@ h6,
 .h6 {
   font-size: 12px;
 }
-p {
-  margin: 0 0 10px;
-}
+
 .lead {
   margin-bottom: 20px;
   font-size: 16px;
@@ -4285,7 +4283,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .container > .navbar-collapse,
   .container-fluid > .navbar-collapse {
     margin-right: 0;
-    margin-left: 0;
+    margin-left: -29px;
   }
 }
 .navbar-static-top {
